[project]
name = "pygrays-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn==0.34.2",
    "dependency-injector>=4.41.0",
    "pip==25.0.1",
    "pydantic-core==2.34.1",
    "python-multipart>=0.0.20",
    "openpyxl>=3.1.5",
]
